changed open connection