@@ -8,7 +8,9 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
+import java.net.HttpURLConnection;
 import java.net.URI;
+import java.net.URL;
 import java.net.URLConnection;
 import java.util.LinkedList;
 import java.util.List;
@@ -62,8 +64,11 @@ public class SubLinker extends AbstractVerticle {
         StringBuilder content = new StringBuilder();
         try {
 
-            URLConnection urlConnection = new URI(entryPoint).toURL().openConnection();
-            BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(urlConnection.getInputStream()));
+            URL url = new URL(entryPoint);
+            //open connection
+            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+            conn.setRequestMethod("GET");
+            BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(conn.getInputStream()));
             while ((line = bufferedReader.readLine()) != null) {
                 //System.out.println(line);
                 if(depth>0) {
